--- a/baxter_speech_command/CMakeLists.txt
+++ b/baxter_speech_command/CMakeLists.txt
@@ -123,8 +123,13 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-install(PROGRAMS
-   scripts/speech_to_text.py
+
+install(DIRECTORY scripts/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/scripts
+)
+
+install(DIRECTORY launch/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
 )
 #   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 # )
