--- a/baxter_kinect_calibration/package.xml
+++ b/baxter_kinect_calibration/package.xml
@@ -17,7 +17,7 @@
   <build_depend>image_geometry</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>opencv2</build_depend>
-
+  <build_depend>camera_info_manager</build_depend>
   <build_depend>libpc-all></build_depend>
   <build_depend>pcl_msgs</build_depend>
   <build_depend>pcl_conversions</build_depend>
@@ -45,6 +45,7 @@
   <run_depend>eigen</run_depend>
   <run_depend>image_geometry</run_depend>
   <run_depend>image_transport</run_depend>
+  <run_depend>camera_info_manager</run_depend>
   <run_depend>opencv2</run_depend>
   <run_depend>pcl_conversions</run_depend>
   <run_depend>pcl_ros</run_depend>
@@ -64,4 +65,5 @@
   <run_depend>tinyxml</run_depend>
   <run_depend>visualization_msgs</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
+  <run_depend>baxter_interface</run_depend>
 </package>
