--- a/baxter_kinect_calibration/package.xml
+++ b/baxter_kinect_calibration/package.xml
@@ -6,7 +6,7 @@
   </description>
   <author>Stephen Brawner</author>
   <author>Dave Abel</author>
-  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
+  <maintainer email="brawner@cs.brown.edu">Stephen Brawner</maintainer>
   <license>BSD</license>
   <url></url>
   
