--- a/baxter_h2r_packages/package.xml
+++ b/baxter_h2r_packages/package.xml
@@ -1,5 +1,5 @@
 <package>
-  <name>baxter_packages</name>
+  <name>baxter_h2r_packages</name>
   <version>0.1.0</version>
   <description>
     Metapackage for Brown CS H2R baxter hackamegathon
