--- a/meldon_detection/src/kdes/dependencies/matio/src/Makefile
+++ b/meldon_detection/src/kdes/dependencies/matio/src/Makefile
@@ -34,7 +34,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = x86_64-unknown-linux-gnu
 host_triplet = x86_64-unknown-linux-gnu
-am__append_1 = mat73.c
+#am__append_1 = mat73.c
 #am__append_2 = $(FCLDFLAGS)
 #am__append_3 = fortran/matio_internal.c fortran/matio.f90
 #am__append_4 = $(top_builddir)/src/matio.mod
@@ -105,7 +105,7 @@ am__libmatio_la_SOURCES_DIST = snprintf.c endian.c io.c inflate.c \
 	read_data.c mat5.c mat4.c mat.c mat73.c \
 	fortran/matio_internal.c fortran/matio.f90
 am__objects_1 = inflate.lo
-am__objects_2 = mat73.lo
+#am__objects_2 = mat73.lo
 #am__objects_3 = matio_internal.lo matio.lo
 am_libmatio_la_OBJECTS = snprintf.lo endian.lo io.lo $(am__objects_1) \
 	read_data.lo mat5.lo mat4.lo mat.lo $(am__objects_2) \
@@ -160,18 +160,18 @@ ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 
-ACLOCAL = ${SHELL} /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/config/missing --run aclocal-1.11
-AMTAR = ${SHELL} /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/config/missing --run tar
+ACLOCAL = ${SHELL} /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/config/missing --run aclocal-1.11
+AMTAR = ${SHELL} /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/config/missing --run tar
 AM_DEFAULT_VERBOSITY = 1
 AR = ar
-AUTOCONF = ${SHELL} /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/config/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/config/missing --run autoheader
+AUTOCONF = ${SHELL} /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/config/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/config/missing --run autoheader
 AUTOM4TE = autom4te
-AUTOMAKE = ${SHELL} /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/config/missing --run automake-1.11
+AUTOMAKE = ${SHELL} /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/config/missing --run automake-1.11
 AUTOTEST = $(AUTOM4TE) --language=Autotest
 AWK = mawk
 CC = gcc
-CFLAGS =  -g -O2
+CFLAGS =  -DH5_USE_16_API
 CPP = gcc -E
 CPPFLAGS = 
 CYGPATH_W = echo
@@ -195,7 +195,7 @@ GREP = /bin/grep
 HAVE_INT64 = 1
 HAVE_UINT64 = 1
 HDF5_CFLAGS = 
-HDF5_LIBS = -lhdf5
+HDF5_LIBS = 
 INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
@@ -212,7 +212,7 @@ LTLIBOBJS =
 LT_CFLAGS = 
 LT_LDFLAGS = 
 MAINT = #
-MAKEINFO = ${SHELL} /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/config/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/config/missing --run makeinfo
 MATLABEXE = 
 MKDIR_P = /bin/mkdir -p
 NM = /usr/bin/nm -B
@@ -242,10 +242,10 @@ UNISTD_H =
 VERSION = 1.5.0
 ZLIB_CFLAGS = 
 ZLIB_LIBS = -lz
-abs_builddir = /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/src
-abs_srcdir = /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/src
-abs_top_builddir = /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio
-abs_top_srcdir = /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio
+abs_builddir = /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/src
+abs_srcdir = /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/src
+abs_top_builddir = /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio
+abs_top_srcdir = /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio
 ac_ct_CC = gcc
 ac_ct_DUMPBIN = 
 ac_ct_FC = 
@@ -274,7 +274,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/config/install-sh
+install_sh = ${SHELL} /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/config/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
