--- a/meldon_detection/src/kdes/dependencies/matio/test/Makefile
+++ b/meldon_detection/src/kdes/dependencies/matio/test/Makefile
@@ -141,18 +141,18 @@ ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 
-ACLOCAL = ${SHELL} /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/config/missing --run aclocal-1.11
-AMTAR = ${SHELL} /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/config/missing --run tar
+ACLOCAL = ${SHELL} /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/config/missing --run aclocal-1.11
+AMTAR = ${SHELL} /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/config/missing --run tar
 AM_DEFAULT_VERBOSITY = 1
 AR = ar
-AUTOCONF = ${SHELL} /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/config/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/config/missing --run autoheader
+AUTOCONF = ${SHELL} /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/config/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/config/missing --run autoheader
 AUTOM4TE = autom4te
-AUTOMAKE = ${SHELL} /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/config/missing --run automake-1.11
+AUTOMAKE = ${SHELL} /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/config/missing --run automake-1.11
 AUTOTEST = $(AUTOM4TE) --language=Autotest
 AWK = mawk
 CC = gcc
-CFLAGS =  -g -O2
+CFLAGS =  -DH5_USE_16_API
 CPP = gcc -E
 CPPFLAGS = 
 CYGPATH_W = echo
@@ -176,7 +176,7 @@ GREP = /bin/grep
 HAVE_INT64 = 1
 HAVE_UINT64 = 1
 HDF5_CFLAGS = 
-HDF5_LIBS = -lhdf5
+HDF5_LIBS = 
 INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
@@ -193,7 +193,7 @@ LTLIBOBJS =
 LT_CFLAGS = 
 LT_LDFLAGS = 
 MAINT = #
-MAKEINFO = ${SHELL} /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/config/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/config/missing --run makeinfo
 MATLABEXE = 
 MKDIR_P = /bin/mkdir -p
 NM = /usr/bin/nm -B
@@ -223,10 +223,10 @@ UNISTD_H =
 VERSION = 1.5.0
 ZLIB_CFLAGS = 
 ZLIB_LIBS = -lz
-abs_builddir = /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/test
-abs_srcdir = /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/test
-abs_top_builddir = /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio
-abs_top_srcdir = /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio
+abs_builddir = /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/test
+abs_srcdir = /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/test
+abs_top_builddir = /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio
+abs_top_srcdir = /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio
 ac_ct_CC = gcc
 ac_ct_DUMPBIN = 
 ac_ct_FC = 
@@ -255,7 +255,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/meldon/KernelDescriptors_C_v1_2/dependencies/matio/config/install-sh
+install_sh = ${SHELL} /home/brawner/catkin_ws/src/baxter_h2r_packages/meldon_detection/src/kdes/dependencies/matio/config/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
@@ -298,8 +298,8 @@ TEST_DATAFILES = $(srcdir)/datasets/matio_test_cases.m \
                  $(srcdir)/datasets/matio_test_cases_v4_be.mat \
                  $(srcdir)/datasets/matio_test_cases_v4_le.mat
 
-#MAT73 = 0
-MAT73 = 1
+MAT73 = 0
+#MAT73 = 1
 #COMPRESSION_ZLIB = 0
 COMPRESSION_ZLIB = 1
 CHECK_ENVIRONMENT = GREP=$(GREP) MAT73=$(MAT73) MATLABEXE=$(MATLABEXE) \
