--- a/listen_and_grasp/package.xml
+++ b/listen_and_grasp/package.xml
@@ -46,12 +46,14 @@
   <build_depend>moveit_msgs</build_depend>
   <build_depend>object_recognition_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>tf</build_depend>
   <run_depend>baxter_interface</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>moveit_commander</run_depend>
   <run_depend>moveit_msgs</run_depend>
   <run_depend>object_recognition_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
+  <run_depend>tf</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
