--- a/meldon_detection/CMakeLists.txt
+++ b/meldon_detection/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
   image_transport
   message_generation
   BING
+  PCL
 )
 
 add_message_files(
@@ -23,15 +24,22 @@ add_message_files(
   RecognizedObjectArray.msg
 )
 
+
+
+
 generate_messages(DEPENDENCIES geometry_msgs std_msgs)
 
 catkin_package(CATKIN_DEPENDS message_runtime)
 
-link_directories(/opt/ros/hydro/lib)
+link_directories(/opt/ros/hydro/lib ${PCL_LIBRARY_DIRS})
+
+add_definitions(${PCL_DEFINITIONS})
+
 
 include_directories(include
 	${catkin_INCLUDE_DIRS}
 	${EIGEN_INCLUDE_DIRS}
+  ${PCL_INCLUDE_DIRS}
 )
 
 add_executable(joberlin_detector src/joberlin_detection.cpp)
