--- a/baxter_kinect_calibration/package.xml
+++ b/baxter_kinect_calibration/package.xml
@@ -13,10 +13,10 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>cv_bridge</build_depend>
+  <build_depend>cmake_modules</build_depend>
   <build_depend>eigen</build_depend>
   <build_depend>image_geometry</build_depend>
   <build_depend>image_transport</build_depend>
-  <build_depend>opencv2</build_depend>
   <build_depend>camera_info_manager</build_depend>
   <build_depend>libpc-all></build_depend>
   <build_depend>pcl_msgs</build_depend>
@@ -26,7 +26,6 @@
   <build_depend>tf</build_depend>
   <build_depend>visualization_msgs</build_depend>
   <build_depend>ar_track_alvar</build_depend> 
-
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>resource_retriever</build_depend>
@@ -46,7 +45,6 @@
   <run_depend>image_geometry</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>camera_info_manager</run_depend>
-  <run_depend>opencv2</run_depend>
   <run_depend>pcl_conversions</run_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>roscpp</run_depend>
